# sapro

./: LICENSE  README.md  pyproject.toml
src/sapro/: __init__.py  __main__.py  algebra.py  error.py  index.html  simplex.py  tableau.py  utils.py  webui.py
