[project]
name = "sapro"
version = "0.2.2a1"
description = "Solve linear programming problems using simplex algorithm."
readme = "README.md"
authors = [
    { name = "origamizyt", email = "zhaoyitong18@163.com" }
]
requires-python = ">=3"
dependencies = [
    "numpy",
]

[project.urls]
source = "https://github.com/origamizyt/sapro"

[project.scripts]
sapro = "sapro.__main__:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
